tests/test128.rael.exp
Error [tests/test128.rael:1:12]: this should explode
| catch blame(blame("this should explode")) with {
|            ^
